--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
-  <title>Infi | Security cameras Utrecht</title>
+  <title>NPO | Security cameras Utrecht</title>
   <!-- Video camera Icon by Martz90 available at http://www.iconarchive.com/show/circle-icons-by-martz90/video-camera-icon.html under a Creative Commons Attribution-Noncommercial-No Derivate 4.0. Full terms at http://creativecommons.org/licenses/by-nc-nd/4.0 -->
   <link rel="icon" type="image/x-icon" href="video-camera-icon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
